[package]
name = "opengl"
version = "0.1.0"
authors = ["coil398 <konayuta.sou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.3"
gl = "0.14.0"
cgmath = "0.17.0"
c_str_macro = "1.0.2"
imgui = "0.4.0"
imgui-sdl2 = "0.11.0"
imgui-opengl-renderer = "0.8.0"
image = "0.23.9"
